--- a/.env.example
+++ b/.env.example
@@ -38,3 +38,5 @@ MOVIE_LANGUAGE=en
 # If true: excludes movies with either 'Fanart' or 'Overlay' labels
 # If false: only excludes movies with 'Fanart' label
 IGNORE_OVERLAY_TAG=false
+
+TZ=Europe/Warsaw
