- Changed label from Fanart to FanPlex - ORIGINAL_LANGUAGE_COUNTRIES variable added

--- a/.env.example
+++ b/.env.example
@@ -19,8 +19,8 @@ RUN_TIME=09:00
 # Run immediately when container starts in TIME mode (true/false)
 RUN_ON_STARTUP=false
 
-# Enable fanart.tv poster processing (true/false)
-ENABLE_FANART=true
+# Prefer TMDB posters over Fanart.tv
+PREFER_TMDB=true
 
 # Fanart.tv API key (required if ENABLE_FANART=true)
 # Get your free API key at: https://fanart.tv/get-an-api-key/
@@ -37,6 +37,9 @@ MOVIE_LANGUAGE=en
 # Also ignore movies with 'Overlay' label (true/false)
 # If true: excludes movies with either 'Fanart' or 'Overlay' labels
 # If false: only excludes movies with 'Fanart' label
-IGNORE_OVERLAY_TAGGED=false
+IGNORE_OVERLAY_TAGGED=true
+
+# Use original language for Polish and Italian movies
+ORIGINAL_LANGUAGE_COUNTRIES="PL,IT"
 
 TZ=Europe/Warsaw
